Реализованы методы для работы с прогнозом погоды в weather handler и в клиентах, проходящие все тесты (green). Обновлены swagger файлы. Добавлен нужный метод в контроллер
